<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp">

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="userName,etNameInput,btnApplyUser,btnChangeUser"/>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_user_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bar"
        />

    <EditText
        android:id="@+id/etNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/et_user_name_hint"
        android:hint="@string/et_user_name_hint"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bar"
        />

    <Button
        android:id="@+id/btnChangeUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="changeClicked"
        android:text="@string/change_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bar"
        />

    <Button
        android:id="@+id/btnApplyUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="applyClicked"
        android:text="@string/apply_btn"
        android:visibility="invisible"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bar"
        />

    <ImageView
        android:id="@+id/coverImage"
        android:contentDescription="@string/img_description"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/album_cover"
        />

    <TextView
        android:id="@+id/songName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_name"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coverImage"
        />

    <TextView
        android:id="@+id/playCounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_plays"
        app:layout_constraintTop_toBottomOf="@id/artistName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingTop="16dp"
        />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/artist_names"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@id/songName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/previousBtn"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:contentDescription="@string/previous_btn"
        android:onClick="previousClicked"
        android:tint="@color/grey"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/playCounts"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/playBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_skip_previous_black_24dp"
        />

    <ImageView
        android:id="@+id/playBtn"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:contentDescription="@string/play_btn"
        android:onClick="playClicked"
        android:tint="@color/grey"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@id/previousBtn"
        app:layout_constraintRight_toLeftOf="@id/nextBtn"
        app:layout_constraintTop_toBottomOf="@id/playCounts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_play_circle_filled_black_24dp"
        />

    <ImageView
        android:id="@+id/nextBtn"
        android:onClick="nextClicked"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:contentDescription="@string/next_btn"
        android:tint="@color/grey"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/playCounts"
        app:layout_constraintLeft_toRightOf="@+id/playBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_skip_next_black_24dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
